--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resume",
   "version": "0.1.0",
-  "homepage": "https://danieldoh2.github.io/react-gh-pages",
+  "homepage": "https://danieldoh2.github.io/danieldoh2.github.io",
   "private": true,
   "dependencies": {
     "react": "^16.6.0",
@@ -9,9 +9,9 @@
     "react-scripts": "2.1.1"
   },
   "scripts": {
+    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
