--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resume",
   "version": "0.1.0",
   "homepage": "https://danieldoh2.github.io/danieldoh2.github.io",
-  "private": true,
+  "private": false,
   "dependencies": {
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
