--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resume",
   "version": "0.1.0",
-  "homepage": "https://danieldoh2.github.io/danieldoh2.github.io",
+  "homepage": "https://danieldoh2.github.io/",
   "private": false,
   "dependencies": {
     "react": "^16.6.0",
