--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resume",
   "version": "0.1.0",
-  "homepage": "https://danieldoh2.github.io/",
+  "homepage": "https://danieldoh2.github.io/danieldoh2.github.io",
   "private": false,
   "dependencies": {
     "react": "^16.6.0",
@@ -9,10 +9,10 @@
     "react-scripts": "2.1.1"
   },
   "scripts": {
-    "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
